--- a/241124/index.html
+++ b/241124/index.html
@@ -25,11 +25,12 @@
           <br><br>
 
           <label for="ders">En Sevdiğiniz Ders:</label><br>
-         <datalist>
-            <option value="web">Web Tabanlı Uygulama Geliştirme</option>
-            <option value="yZeka">Yapay Zeka ve Makine Öğrenmesi</option>
-            <option value="Mobil">Mobil Uygulama Geliştirme</option>
-            <option value="grafik">Grafik ve Canlandırma</option>
+          <input type="text" id="ders" name="ders" list="dersler">
+         <datalist id="dersler">
+            <option value="Web Tabanlı Uygulama Geliştirme"></option>
+            <option value="Yapay Zeka ve Makine Öğrenmesi"></option>
+            <option value="Mobil Uygulama Geliştirme"></option>
+            <option value="Grafik ve Canlandırma"></option>
          </datalist>
           
         </fieldset>
